# Proyecto-internet

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fix_tokens.sql  limpiar.sh
Login_service/: Makefile  db_manager.cpp  db_manager.cpp:Zone.Identifier  db_manager.h  manejador_sesion.cpp  manejador_sesion.h  operaciones_usuario.cpp  operaciones_usuario.h  servicio_login.cpp  verificador_identidad.cpp  verificador_identidad.h  verificador_token.cpp  verificador_token.h
clients/operator_client/: operator_client.py  operator_gui.py
clients/sensor_simulator/: requirements.txt  run_sensors.py  sensor_base.py  sensor_co2.py  sensor_humedad.py  sensor_pm25.py  sensor_ruido.py  sensor_temperatura.py  sensor_uv.py
deployment/scripts/: deploy.sh  deploy_aws.sh  docker_entrypoint.sh  reset_aws.sh  start_server.sh
docs/database/: schema.sql  seed.sql
server/: CMakeLists.txt  Makefile  server.cpp
web/: index.html  web_server.py
